Trying to fix overflow issue on mobile by making square sizing more responsive

--- a/src/styles.css
+++ b/src/styles.css
@@ -111,7 +111,7 @@ h1 {
 }
 
 .square {
-	width: 80px;
+	width: min(80px, 10vmin);
 	height: 80px;
 	border: 1px solid black;
 
